update default schedule colours patch, fix scroll bars on wide schedules, and default schedule visibility to on.

--- a/src/main/frontend/src/schedule/_schedule.scss
+++ b/src/main/frontend/src/schedule/_schedule.scss
@@ -84,7 +84,8 @@
 	@extend %juno-primary-view-pane;
 	@include juno-page-margin-none;
 	position: relative;
-	overflow: hidden;
+	overflow-y: hidden;
+	overflow-x: auto;
 
 	.calendar-loading
 	{
